# Syft

./: CMakeLists.txt  INSTALL  package.xml
CMakeModules/: Findcudd.cmake  Findjet.cmake  Findrsynth.cmake
benchmarks/: random_conjunction_benchmark.py
experiments/: pull_lily.sh  run_full.sh  run_one.sh  run_set.sh
experiments/Acacia/: load_0.ltl  load_0.part  load_1.ltl  load_10.ltl  load_11.ltl  load_12.ltl  load_13.ltl  load_14.ltl  load_15.ltl  load_16.ltl  load_17.ltl  load_18.ltl  load_19.ltl  load_19.part  load_2.ltl  load_20.ltl  load_21.ltl  load_22.ltl  load_23.ltl  load_23.part  load_24.ltl  load_25.ltl  load_26.ltl  load_27.ltl  load_28.ltl  load_29.ltl  load_3.ltl  load_30.ltl  load_31.ltl  load_32.ltl  load_33.ltl  load_34.ltl  load_34.part  load_35.ltl  load_36.ltl  load_37.ltl  load_38.ltl  load_39.ltl  load_4.ltl  load_40.ltl  (+47 more)
experiments/Lily/: demo-v1.ltl  demo-v13.ltl  demo-v13.part  demo-v14.ltl  demo-v15.part  demo-v16.part  demo-v17.part  demo-v19.ltl  demo-v19.part  demo-v20.ltl  demo-v20.ltl~  demo-v21.part  demo-v23.ltl  demo-v24.ltl  demo-v24.ltl~  demo-v24.part  demo-v24.part~  demo-v3.ltl  demo-v4.ltl  demo-v5.ltl  demo-v5.ltl~  demo-v6.ltl  demo-v6.ltl~  demo-v9.part
src/: CMakeLists.txt
src/ltlf2fol/: CMakeLists.txt  LTLInterp.cpp  LTLInterp.h  ltlf2fol.cpp  ltlf2fol.h  translate.cpp  translate_0.cpp  translate_1.cpp
src/ltlf2pfol/: translatep.cpp
src/synthesis/: BDDDictFactory.cpp  BDDDictFactory.h  CMakeLists.txt  CoRDFA_syn.cpp  CoRDFA_syn.h  Common.h  DFA.cpp  DFA.h  DFAGameSolver.cpp  DFAGameSolver.h  DFALoader.cpp  DFALoader.h  InputFirst.cpp  InputFirst.h  InstanceFactory.cpp  InstanceFactory.h  JoinAlgFactory.cpp  JoinAlgFactory.h  Logger.cpp  Logger.h  OldDFA.cpp  OldDFA.h  SMTBDD.cpp  SMTBDD.h  SSNFA.cpp  StateMap.cpp  StateMap.h  SyftMgr.cpp  SyftMgr.h  SymbolicDFA.cpp  SymbolicDFA.h  SymbolicDFAConverter.cpp  SymbolicDFAConverter.h  VarPartition.cpp  VarPartition.h  debug.h  main.cpp  manual_main.cpp  optional.h  syn.cpp  (+3 more)
